--- a/pages/login.html
+++ b/pages/login.html
@@ -17,7 +17,7 @@
       <input type="text" id="profilepass">
 
       <div class="registration">
-         <button id="signup"><a href="./signup.html">Sing up</a></button>
+         <button id="signup"><a href="./index.html">Sing up</a></button>
          <button id="signin">Sign in</button>
       </div>
 
