--- a/pages/login.html
+++ b/pages/login.html
@@ -13,8 +13,8 @@
 
       <img src="../img/icons8-test-account-96.png" alt="Фото профиля при входе">
 
-      <input type="text" id="profilename">
-      <input type="text" id="profilepass">
+      <input type="text" id="profilename" placeholder="login">
+      <input type="text" id="profilepass" placeholder="password">
 
       <div class="registration">
          <button id="signup"><a href="../index.html">Sing up</a></button>
